--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "chartjs-plugin-datalabels": "^2.1.0",
     "random-position-in-polygon": "^1.0.6",
     "vue": "^2.7.7",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^3.5.4"
   },
   "devDependencies": {
